deploy(be,fe): configure independent launch (wo api yet), update makefile

--- a/frontend/input.css
+++ b/frontend/input.css
@@ -1,8 +1,15 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
 
-/* Кастомные стили для компонентов */
+@theme {
+  --color-blue-light: #a2d2ff;
+  --color-blue-lighter: #bee2ff;
+  --color-pink: #faaac7;
+  --color-pink-light: #ffc8dd;
+  --color-purple: #cdb4db;
+  --color-purple-dark: #b399cc;
+}
+
+/* Ваши кастомные стили */
 .file-card {
   transition: all 0.2s ease;
 }
